--- a/tourplanner/src/main/resources/fxml/addTour.fxml
+++ b/tourplanner/src/main/resources/fxml/addTour.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.AddTourController" >
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.AddTourController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -16,38 +23,38 @@
         <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
     </padding>
     <children>
-        <VBox prefHeight="200.0" prefWidth="100.0">
+        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.hgrow="SOMETIMES" GridPane.vgrow="SOMETIMES">
             <children>
-                <Label text="Name">
+                <Label text="Name" VBox.vgrow="SOMETIMES">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="name" />
-                <Label text="Start">
+                <TextField fx:id="name" VBox.vgrow="SOMETIMES" />
+                <Label text="Start" VBox.vgrow="SOMETIMES">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="start" />
-                <Label text="End">
+                <TextField fx:id="start" VBox.vgrow="SOMETIMES" />
+                <Label text="End" VBox.vgrow="SOMETIMES">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="end" />
-                <Label text="Description">
+                <TextField fx:id="end" VBox.vgrow="SOMETIMES" />
+                <Label text="Description" VBox.vgrow="SOMETIMES">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextArea fx:id="description" prefHeight="90.0" prefWidth="500.0">
+                <TextArea fx:id="description" prefHeight="90.0" prefWidth="500.0" VBox.vgrow="SOMETIMES">
                     <VBox.margin>
                         <Insets bottom="5.0" />
                     </VBox.margin>
                 </TextArea>
 
-                <HBox alignment="CENTER" prefHeight="25.0" prefWidth="500.0">
+                <HBox alignment="CENTER" prefHeight="25.0" prefWidth="500.0" VBox.vgrow="SOMETIMES">
                     <children>
                         <Button mnemonicParsing="false" onAction="#createTour" text="Create" />
                     </children>
