--- a/tourplanner/src/main/resources/fxml/mainWindow.fxml
+++ b/tourplanner/src/main/resources/fxml/mainWindow.fxml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="371.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/15.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.MainController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.MainController">
    <children>
-      <MenuBar fx:id="menuBar" prefHeight="29.0" prefWidth="1055.0" GridPane.columnSpan="2">
+      <MenuBar fx:id="menuBar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
          <menus>
             <Menu mnemonicParsing="false" text="Tour">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Import" onAction="#importTour"/>
-                  <MenuItem mnemonicParsing="false" text="Export" onAction="#exportTour"/>
-                  <MenuItem mnemonicParsing="false" text="Report" onAction="#fileReport" />
+                  <MenuItem mnemonicParsing="false" onAction="#importTour" text="Import" />
+                  <MenuItem mnemonicParsing="false" onAction="#exportTour" text="Export" />
+                  <MenuItem mnemonicParsing="false" onAction="#fileReport" text="Report" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
@@ -28,40 +25,22 @@
             </Menu>
          </menus>
       </MenuBar>
-      <VBox prefHeight="369.0" prefWidth="172.0" GridPane.rowIndex="1">
-         <children>
-         <fx:include fx:id="tourOverview" source="tourOverview.fxml" />
-         </children>
-      </VBox>
-      <GridPane prefHeight="208.0" prefWidth="423.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="164.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="296.0" minHeight="10.0" prefHeight="296.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <HBox prefHeight="306.0" prefWidth="463.0" GridPane.rowIndex="1">
-               <children>
-               <fx:include fx:id="tourInfos" source="tourInfos.fxml" />
-               </children>
-               <GridPane.margin>
-                  <Insets bottom="10.0" />
-               </GridPane.margin>
-            </HBox>
-         </children>
-      </GridPane>
+
+
+      <fx:include fx:id="tourOverview" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="tourOverview.fxml" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+      <fx:include fx:id="tourInfos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="tourInfos.fxml" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+
+
    </children>
    <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
+      <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
       <ColumnConstraints />
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints />
-      <RowConstraints maxHeight="352.0" minHeight="10.0" prefHeight="340.0" />
-      <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" vgrow="NEVER" />
+      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="0.0" minHeight="0.0" />
    </rowConstraints>
 </GridPane>
