--- a/tourplanner/src/main/resources/fxml/path.fxml
+++ b/tourplanner/src/main/resources/fxml/path.fxml
@@ -1,33 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.PathController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.matthias.tourplanner.views.PathController">
+   <columnConstraints>
+        <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="300.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="200.0" vgrow="ALWAYS" />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="200.0" valignment="CENTER" vgrow="ALWAYS" />
+    </rowConstraints>
    <children>
-      <HBox layoutX="109.0" layoutY="193.0">
+      <HBox alignment="TOP_CENTER" layoutX="109.0" layoutY="241.0" maxWidth="1.7976931348623157E308" GridPane.rowIndex="1">
          <children>
-            <TextField fx:id="pathField" prefHeight="28.0" prefWidth="386.0" promptText="/home/example/" />
+            <Button mnemonicParsing="false" onAction="#enter" text="Enter">
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#cancel" text="Cancel">
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </Button>
          </children>
+         <opaqueInsets>
+            <Insets top="40.0" />
+         </opaqueInsets>
       </HBox>
-      <HBox layoutX="109.0" layoutY="241.0">
+      <HBox>
          <children>
-            <Button mnemonicParsing="false" onAction="#enter" text="Enter" />
-            <Button mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-         </children>
-      </HBox>
-      <HBox layoutX="109.0" layoutY="159.0">
-         <children>
-            <Label text="Enter Path">
+            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="55.0" prefWidth="599.0" text="Enter Path">
                <font>
                   <Font size="16.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="30.0" />
+               </HBox.margin>
             </Label>
          </children>
       </HBox>
+      <HBox alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308">
+         <children>
+            <TextField fx:id="pathField" prefHeight="34.0" prefWidth="560.0" promptText="/home/example/">
+               <HBox.margin>
+                  <Insets bottom="20.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+         <opaqueInsets>
+            <Insets bottom="20.0" />
+         </opaqueInsets>
+      </HBox>
    </children>
-</AnchorPane>
+</GridPane>
