split report in report and summary, simplifed maincontroller, specify path for reports

--- a/tourplanner/src/main/resources/fxml/mainWindow.fxml
+++ b/tourplanner/src/main/resources/fxml/mainWindow.fxml
@@ -16,6 +16,7 @@
                   <MenuItem mnemonicParsing="false" onAction="#importTour" text="Import" />
                   <MenuItem mnemonicParsing="false" onAction="#exportTour" text="Export" />
                   <MenuItem mnemonicParsing="false" onAction="#fileReport" text="Report" />
+                  <MenuItem mnemonicParsing="false" onAction="#fileSummary" text="Summary"/>
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
